--- a/public/uniboard-player/stylesheets/master.css
+++ b/public/uniboard-player/stylesheets/master.css
@@ -79,7 +79,8 @@ input{
 
 #menu-export-dropdown ul li{ border-bottom:1px solid #ddd }
 #menu-export-dropdown ul li:last-child{ border-bottom:0px }
-#menu-export-dropdown ul li.over{ background-color:red; color:white }
+#menu-export-dropdown ul li.over{ background-color:red }
+#menu-export-dropdown ul li a.over{ color:white }
 #menu-export-dropdown ul li a.disabled{ color:#ddd }
 #menu-export-dropdown ul li a{ color:#666; text-decoration:none; }
 
@@ -90,12 +91,12 @@ input{
   letter-spacing:normal;
   text-align:right;
   margin:auto;
-  margin-top:10px;
+  margin-top:28px;
+  font-size:12px;
 }
 
 #document-title ul{
   width:200px;
-  text-align:left;
   display:inline-block;
   line-height:normal;
 }
@@ -107,6 +108,7 @@ input{
 #document-title ul li{
   border-bottom:1px solid #eee;
   margin-bottom:5px;
+  display:inline;
 }
 
 #document-title img{
@@ -139,7 +141,7 @@ input{
 .page{ display:inline-block; margin:auto; height:100% }
 #current-page{ width:100%; height:100%; background-color:white; border:1px solid rgb(210, 211, 212); box-shadow: 2px 2px 10px #bbb; -webkit-box-shadow: 2px 2px 10px #bbb; -moz-box-shadow: 2px 2px 10px #bbb }
 
-#thumbnails{ display:block; padding:0px 50px 10px 50px; height:32px; overflow:hidden; position:relative; text-align:center; background:url(../images/menu-slider-background.png) repeat-x center 13px; }
+#thumbnails{ display:block; padding:0px 50px 10px 50px; height:32px; overflow:hidden; position:relative; text-align:center; background:url(../images/menu-slider-background.png) repeat-x center 12px; }
 #thumbnails-slider{ position:relative; height:8px; margin-top:24px; margin-bottom:14px }
 #thumbnails-slider-handler{ height:28px; width:17px; position:relative; top:-21px; background:url(../images/slider-handler.png) }
 .thumbnails-slider-page{ position:relative; display:block; float:left; height:100%; width:100%; background:url(../images/thumbnails-slider-odd.png) center right }
