--- a/public/uniboard-player/stylesheets/master.css
+++ b/public/uniboard-player/stylesheets/master.css
@@ -90,11 +90,16 @@ input{
 #logo-uniboard{ background:url(../images/logo-uniboard.png); width:114px; height:25px; position:absolute; top:22px; left:50px }
 
 #document-title{
+  font-weight:normal;
   letter-spacing:normal;
   text-align:right;
   margin:auto;
   margin-top:28px;
   font-size:12px;
+}
+
+#document-title span{
+  font-weight:bold;
 }
 
 #document-title ul{
@@ -108,9 +113,7 @@ input{
 }
 
 #document-title ul li{
-  border-bottom:1px solid #eee;
   margin-bottom:5px;
-  display:inline;
 }
 
 #document-title img{
