logo link to uniboard website

--- a/app/views/document_publishing/show.html.erb
+++ b/app/views/document_publishing/show.html.erb
@@ -479,7 +479,7 @@
 <body>
 
   <div id="head">
-    <div id="logo-uniboard"></div>
+    <a href="http://www.getuniboard.com"><img src="/uniboard-player/images/logo-uniboard.png" id="logo-uniboard"></a>
     <div id="document-title">
       <ul>
         <li id="data-document-title"></li>
