--- a/public/uniboard-player/stylesheets/master.css
+++ b/public/uniboard-player/stylesheets/master.css
@@ -134,6 +134,36 @@ input{
   width:100%;
 }
 
+#app-viewer{
+  width:100%;
+  height:100%;
+  position:absolute;
+  top:0px;
+}
+
+#app-viewer-c{
+  height:100%;
+  position:relative;
+  margin:auto;
+  top:0px;
+  display:table;
+  background:url(../images/app-viewer-background.png) ;
+}
+
+#app-viewer-appcanvas{
+  height:100%;
+  width:100%;
+  position:relative;
+  margin:auto;
+  display:table-cell;
+  vertical-align:middle;
+}
+
+#app-viewer-app{
+  z-index:1;
+  position:relative;
+}
+
 #boards{ background-color:rgb(236, 237, 238); overflow:visible; display:block; text-align:center; height:100%; width:100%; position:relative; margin:auto }
 .board{ display:inline-block; width:100%; height:100%; letter-spacing:-5px }
 .board-button{ height:99%; width:38px; display:inline-block; position:relative; z-index:1 }
