simple quotes to double quotes

--- a/app/views/document_publishing/show.html.erb
+++ b/app/views/document_publishing/show.html.erb
@@ -5,9 +5,9 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en">
 <head>
 	<title><%= @published_document.title %></title>
-	<meta name="title" content='<%= @published_document.title %>'>
-	<meta name="description" content='<%= @published_document.description %>'>
-	<link rel="image_src" href='<%= @published_document.persistence_url %>/page001.thumbnail.jpg'>
+	<meta name="title" content="<%= @published_document.title %>">
+	<meta name="description" content="<%= @published_document.description %>">
+	<link rel="image_src" href="<%= @published_document.persistence_url %>/page001.thumbnail.jpg">
 
 	<style type="text/css">
 	  @import url(/uniboard-player/stylesheets/reset.css);
