--- a/app/views/document_publishing/unpublish.html.erb
+++ b/app/views/document_publishing/unpublish.html.erb
@@ -3,7 +3,7 @@
 
 <html>
 <head>
-	<title>Unbublishing document</title>
+	<title>Unpublishing document</title>
 </head>
 <body>
    <h3>The Document <%= @to_be_unpublished_active.title %> has been unpublished</h3>
