--- a/app/views/document_publishing/show.html.erb
+++ b/app/views/document_publishing/show.html.erb
@@ -6,7 +6,7 @@
 	<title><%= @published_document.title %></title>
 	<meta name="title" content="<%= @published_document.title %>">
 	<meta name="description" content="<%= @published_document.description %>">
-	<link rel="image_src" href="<%= @published_document.persistence_url %>/page001.thumbnail.jpg">
+	<link rel="image_src" href="<%= @published_document.public_url %>/page001.thumbnail.jpg">
 
 	<style type="text/css">
 	  @import url(/uniboard-player/stylesheets/reset.css);
@@ -40,7 +40,7 @@
   	    hasPdf:'<%= @published_document.has_pdf %>',
   	    hasUbz:'<%= @published_document.has_ubz %>',
   	    numberOfPages:'<%= @published_document.page_count %>',
-  	    pagesBaseUrl:'<%= @published_document.persistence_url %>'
+  	    pagesBaseUrl:'<%= @published_document.public_url %>'
   	  }
 	  };
 	  
