--- a/app/views/document_publishing/show.html.erb
+++ b/app/views/document_publishing/show.html.erb
@@ -7,10 +7,11 @@
 	<meta name="title" content="<%= @published_document.title %>">
 	<meta name="description" content="<%= @published_document.description %>">
 	<link rel="image_src" href="<%= @published_document.public_url %>/page001.thumbnail.jpg">
+	<link rel="icon" type="image/png" href="/uniboard-player/images/favicon.png">
 
+  <!-- Stylesheets (imported after window.width test)-->
 	<style type="text/css">
 	  @import url(/uniboard-player/stylesheets/reset.css);
-	  @import url(/uniboard-player/stylesheets/master.css);
 	</style>
 	
 	<!-- Libraries -->
@@ -22,30 +23,48 @@
 	<script type="text/javascript" src="/uniboard-player/scripts/ubplayer.js"></script>
 	<script type="text/javascript" src="/uniboard-player/scripts/ubplayer.player.js"></script>
 	<script type="text/javascript" src="/uniboard-player/scripts/ubplayer.viewer.js"></script>
-	
 	<script type="text/javascript">
 	
-	var myUbPlayer = null;
+  	var myUbPlayer = null;
 	
-	jQuery(document).ready(function(){
-	  
-	  var args = {
-	    documentData:{
-  	    author:'<%= @published_document.author %>',
-  	    authorEmail:'<%= @published_document.author_email %>',
-  	    title:'<%= @published_document.title %>',
-  	    description:'<%= @published_document.description %>',
-  	    publishedAt:'<%= @published_document.created_at %>',
-  	    uuid:'<%= @published_document.publishing_uuid %>',
-  	    hasPdf:'<%= @published_document.has_pdf %>',
-  	    hasUbz:'<%= @published_document.has_ubz %>',
-  	    numberOfPages:'<%= @published_document.page_count %>',
-  	    pagesBaseUrl:'<%= @published_document.public_url %>'
-  	  }
-	  };
-	  
-	  myUbPlayer = new UbPlayer.Player(args);
-	});
+  	jQuery(document).ready(function(){
+  	  
+  	  var args = {
+  	    documentData:{
+    	    author:'<%= @published_document.author %>',
+    	    authorEmail:'<%= @published_document.author_email %>',
+    	    title:'<%= @published_document.title %>',
+    	    description:'<%= @published_document.description %>',
+    	    publishedAt:'<%= @published_document.created_at %>',
+    	    uuid:'<%= @published_document.publishing_uuid %>',
+    	    hasPdf:'<%= @published_document.has_pdf %>',
+    	    hasUbz:'<%= @published_document.has_ubz %>',
+    	    numberOfPages:parseInt('<%= @published_document.page_count %>'),
+    	    pagesBaseUrl:'<%= @published_document.public_url %>' // persistence_url
+    	  }
+  	  };
+	    
+	    myUbPlayer = new UbPlayer.Player(args);
+	    
+	    if(jQuery(window).width() < 800){        
+        myUbPlayer.state = "embedded";
+        jQuery("body").append('<link rel=stylesheet type="text/css" href="/uniboard-player/stylesheets/master.css">');
+        jQuery("body").append('<link rel=stylesheet type="text/css" href="/uniboard-player/stylesheets/master_embed.css">');
+      }else{
+        jQuery("body").append('<link rel=stylesheet type="text/css" href="/uniboard-player/stylesheets/master.css">');
+        jQuery("#menu-share-dropdown").appendTo("#document-links");
+      }
+	    
+  	  jQuery(window).resize(function(){
+        var ratioWh = 1.66;
+        jQuery(".page").width(jQuery(".page").height() * ratioWh);
+        jQuery("#app-viewer-c").width(jQuery(".page").width());
+        jQuery("#document-links").width(jQuery(".page").width());
+      });
+      
+      setTimeout(function(){jQuery(window).resize()}, 500);
+        	  
+  	});
 	
 	</script>
 	
@@ -53,44 +72,59 @@
 
 <body>
 
+  <div id="head-embed">
+    <div id="head-embed-box-left"><a href="http://www.getuniboard.com" target="_blank"><img src="/uniboard-player/images/logo-uniboard-small.png"></a></div>
+  </div>
+
   <div id="head">
-    <a href="http://www.getuniboard.com"><img src="/uniboard-player/images/logo-uniboard.png" id="logo-uniboard"></a>
-    <div id="document-title">
-      <ul>
-        <li id="data-document-title"></li>
-        <li id="data-document-author">&nbsp;<a id="moreLink" href="#">More…</a>&nbsp;<a name="fb_share" type="button_count" href="http://www.facebook.com/sharer.php">Share</a>
-        <script src="http://static.ak.fbcdn.net/connect.php/js/FB.Share" type="text/javascript"></script></li>
-      </ul>
+    <div id="document-links">
+    <ul class="menu-list">
+      <li id="head-list-share"><a id="shareDoc" href="#">Share this document</a></li>
+      <li id="head-list-close"><a id="quitFullscreen" href="#">Exit full-screen view</a></li>
+    </ul>
     </div>
-    <div class="menu-button" id="head-button-close"></div>
   </div>
 
   <div id="body">
     <div id="boards">
       <!-- Current board -->
       <div class="board" id="board-current">
-        <div class="board-button">
-          <div class="board-button-unit" id="board-button-previous"></div>
-        </div>
+        <div class="board-button"></div>
         <iframe class="page" id="current-page" src=""></iframe>
-        <div class="board-button">
-          <div class="board-button-unit" id="board-button-next"></div>
-        </div>
+        <div id="description-container"></div>
+        <div class="board-button"></div>
         <!-- App Viewer -->
         <div id="app-viewer">
           <div id="app-viewer-c"><!-- table -->
             <div id="app-viewer-appcanvas"><!-- table-cell -->
-              <iframe id="app-viewer-app" src=""></iframe><!-- vertical and horizontal centered iframe -->
+              <div id="app-viewer-appborder">
+                <iframe id="app-viewer-app" src=""></iframe>
+                <div id="app-viewer-menu"><div id="app-viewer-button-close-canvas"><div id="app-viewer-button-close"></div></div><a href="#">close</a></div>
+              </div><!-- vertical and horizontal centered iframe -->
             </div>
           </div>
         </div>
       </div>
     </div><!--boards-->
+    <div class="board-button-unit" id="board-button-previous"></div>
+    <div class="board-button-unit" id="board-button-next"></div>
     <div id="index">
     </div><!--index-->
     <div id="description">
       <div id="description-text"></div>
     </div><!--description-->
+    <div id="sharing">
+      <div id="sharing-button-close"></div>
+      <div id="sharing-text">
+        <label>Your E-mail address</label>
+        <input type="text">
+        <label>Recipient E-mail address</label>
+        <input type="text">
+        <label>Your message</label>
+        <textarea>I've been watching a document and thought you might like to see it. Here's an link towards this document.</textarea>
+        <input type="button" value="send" style="margin-top:10px; height:20px">
+      </div>
+    </div><!--sharing-->
   </div>
 
   <div id="foot">
@@ -104,10 +138,23 @@
       </div>
       <div style="width:40px; height:80px; position:absolute; top:45px; left:100%; margin-left:-41px; color:red; font-size:10px; line-height:80px; text-decoration:underline; letter-spacing:normal" id="thumbnail-next"></div>
     </div><!--thumbnails-->
-    <div class="menu bottom">
+    <div id="menu-bottom" class="menu bottom">
       <div class="menu-box-left menu-box">
+        <div id="menu-export-dropdown" class="dropdown">
+          <ul>
+            <li id="menu-export-hasPdf"><a href="#">.Pdf</a></li>
+            <li id="menu-export-hasUbz"><a href="#">.Ubz</a></li>
+          </ul>
+        </div>
+        <div class="menu-button" id="menu-button-export" title="Export this document as…" alt="Export button">
+          <div id="menu-button-export-right"></div>
+          <div id="menu-button-export-center">Export as…</div>
+          <div id="menu-button-export-left"></div>
+        </div>
         <div class="menu-button" id="menu-button-showthumbnails" title="Show the thumbnails" alt="Show thumbnails button"></div>
-        <div style="display:block; float:left; height:31px; margin-left:10px; line-height:42px"><input id="menubottom-input" type="text"></div>
+        <div class="menu-button" id="menu-button-showdetails" title="Show the details" alt="Show details button"></div>
+        <div class="menu-button" id="menu-button-full" title="Switch to full mode" alt="Full mode button"></div>
+        <div style="display:none; float:right; height:31px; margin-left:10px; line-height:42px"><input id="menubottom-input" type="text"></div>
       </div>
       <div class="menu-box-center menu-box">
         <div class="menu-button" id="menu-button-previous" title="Previous page" alt="Previous page button"></div>
@@ -115,13 +162,18 @@
         <div class="menu-button" id="menu-button-next" title="Next page" alt="Next page button"></div>
       </div>
       <div class="menu-box-right menu-box">
-        <div class="menu-button" id="menu-button-full" title="Switch to full mode" alt="Full mode button"></div>
-        <div class="menu-button" id="menu-button-export" title="Export this document as…" alt="Export button">
-          <div id="menu-button-export-left"></div>
-          <div id="menu-button-export-center">Export as…</div>
-          <div id="menu-button-export-right"></div>
+        <a href="http://www.getuniboard.com"><img src="/uniboard-player/images/logo-uniboard-small.png" id="logo-uniboard"></a>
+        <ul class="menu-list" id="embed-menu-list">
+          <li id="menu-list-share"><a href="#">Share&hellip;</a></li>
+          <li id="menu-list-full"><a href="#" target="_blank">Full document</a></li>
+        </ul>
+        <div id="menu-share-dropdown" class="dropdown">
+          <ul>
+            <li id="menu-share-email"><a href="#">E-mail</a></li>
+            <li id="menu-share-facebook"><a href="http://www.facebook.com/sharer.php" target="_blank">Facebook</a></li>
+            <li id="menu-share-twitter"><a href="#" target="_blank">Twitter</a></li>
+          </ul>
         </div>
-        <div id="menu-export-dropdown"><ul><li id="menu-export-hasPdf"><a href="#" target="_blank">.PDF</a></li><li id="menu-export-hasUbz"><a href="#" target="_blank">.UBZ</a></li></ul></div>
       </div>
     </div>
     </div>
