--- a/public/uniboard-player/stylesheets/master.css
+++ b/public/uniboard-player/stylesheets/master.css
@@ -3,28 +3,26 @@ html{ height:100%; width:100% }
 body{ height:100%; width:100%; overflow:hidden; display:table; font-family:helvetica, arial, sans-serif; background-color:rgb(236, 237, 238) }
 
 a{ color:red }
+span{ font-weight:normal }
+input{ border:1px solid rgb(190, 191, 192); display:inline-block; height:13px;margin:0px; }
+label{ display:block; margin-top:15px; }
 
 #head{
-  background-color:rgb(236, 237, 238);
-  display:table;
-  text-align:center;
+  display:block;
   position:absolute;
   top:0;
-  height:55px;
+  padding-top:12px;
   width:100%;
-  font-weight:bold;
-  color:#333;
-  font-size:11px;
   z-index:1;
+  margin:auto;
 }
 
-span{
-  font-weight:normal;
+#head-embed{
+  display:none;
 }
 
-input{
-  border:1px solid rgb(190, 191, 192);
-  display:inline-block;
+#embed-menu-list{
+  display:none;
 }
 
 .menu{
@@ -43,30 +41,50 @@ input{
   height:55px;
 }
 
-.menu-box{ width:33.3%; height:31px; display:inline-block; vertical-align:middle; margin-top:12px; position:relative }
-.menu-box-left{ text-align:left; letter-spacing:2px }
+.menu-box{ width:33.2%; height:31px; display:inline-block; vertical-align:middle; margin-top:12px; position:relative }
+.menu-box-left{ text-align:left }
 .menu-box-center{ text-align:center; line-height:30px }
-.menu-box-right{ text-align:right }
+.menu-box-right{ text-align:right; letter-spacing:normal; }
 
 .menu-button{ height:31px; width:32px; display:inline-block; cursor:pointer }
-#menu-button-previous{ background:url(../images/menu-button-previous.png) }
-#menu-button-previous:hover{ background:url(../images/menu-button-previous-over.png) }
-#menu-button-previous.disabled{ background:url(../images/menu-button-previous-disabled.png) }
+#menu-button-previous{ background:url(../images/menu-button-previous.embed.png); width:32px }
+#menu-button-previous:hover{ background:url(../images/menu-button-previous-over.embed.png) }
+#menu-button-previous.disabled{ background:url(../images/menu-button-previous-disabled.embed.png) }
 #menu-button-index{ background:url(../images/menu-button-index.png); width:35px }
 #menu-button-index:hover{ background:url(../images/menu-button-index-over.png) }
-#menu-button-next{ background:url(../images/menu-button-next.png) }
-#menu-button-next:hover{ background:url(../images/menu-button-next-over.png) }
-#menu-button-next.disabled{ background:url(../images/menu-button-next-disabled.png) }
-#menu-button-showthumbnails{ background:url(../images/menu-button-showthumbnails.png); float:left; }
+#menu-button-showdetails{ background:url(../images/menu-button-showdetails.png); width:33px }
+#menu-button-showdetails:hover{ background:url(../images/menu-button-showdetails-over.png) }
+#menu-button-next{ background:url(../images/menu-button-next.embed.png); width:32px }
+#menu-button-next:hover{ background:url(../images/menu-button-next-over.embed.png) }
+#menu-button-next.disabled{ background:url(../images/menu-button-next-disabled.embed.png) }
+#menu-button-showthumbnails{ background:url(../images/menu-button-showthumbnails.png) }
 #menu-button-showthumbnails:hover{ background:url(../images/menu-button-showthumbnails-over.png) }
-#menu-button-export{ width:auto }
+#menu-button-export{ width:auto; margin-right:20px; }
 #menu-button-export-left{ background:url(../images/menu-button-export-left.png); width:33px; height:100%; float:left }
 #menu-button-export-center{ background:url(../images/menu-button-export-center.png); width:auto; height:100%; float:left; padding:0px 10px 0px 10px; letter-spacing:normal; line-height:30px }
 #menu-button-export-right{ background:url(../images/menu-button-export-right.png); width:5px; height:100%; float:left }
-#menu-button-full{ background:url(../images/menu-button-full.png); margin-right:5px; }
+#menu-button-full{ background:url(../images/menu-button-full.png); margin-right:10px; }
 #menu-button-full:hover{ background:url(../images/menu-button-full-over.png) }
-#menu-export-dropdown{ display:none; position:absolute; top:-55px; left:100%; margin-left:-90px; width:70px; z-index:2; }
-#menu-export-dropdown ul{
+#menu-export-dropdown{ display:none; position:absolute; top:-55px; left:0; margin-left:0px; width:90px; z-index:2; text-indent:30px; }
+#menu-share-dropdown{ display:none; font-size:12px; position:absolute; top:28px; left:100%; margin-left:-122px; width:100px; z-index:2; text-indent:30px; }
+
+#menu-share-email{ background:url(../images/menu-share-email.png) no-repeat 0px 3px }
+#menu-share-email a{ color:#ccc; }
+#menu-share-facebook{ background:url(../images/menu-share-facebook.png) no-repeat 0px 3px }
+#menu-share-facebook a:hover{color:red;}
+#menu-share-twitter{ background:url(../images/menu-share-twitter.png) no-repeat 0px 3px }
+#menu-share-twitter a:hover{color:red;}
+#menu-share-share{ background:url(../images/menu-share-share.png) no-repeat 0px 0px; color:red;text-decoration:underline; margin-top:6px; line-height:12px; }
+#menu-share-share a{ color:red }
+
+#menu-export-hasUbz{ background:url(../images/menu-export-ubz.png) no-repeat 0px 3px }
+#menu-export-hasPdf{ background:url(../images/menu-export-pdf.png) no-repeat 0px 3px }
+
+#menu-export-hasUbz.disabled{ background-image:url(../images/menu-export-ubz.disabled.png) }
+#menu-export-hasPdf.disabled{ background-image:url(../images/menu-export-pdf.disabled.png) }
+
+
+.dropdown ul{
   line-height:20px;
   text-align:left;
   padding:5px 10px 5px 10px;
@@ -74,20 +92,38 @@ input{
   letter-spacing:normal;
   background-color:white;
   border:1px solid rgb(210, 211, 212);
-  box-shadow: 2px 2px 3px #ddd;
-  -webkit-box-shadow: 2px 2px 3px #ddd;
-  -moz-box-shadow: 2px 2px 3px #ddd;
+  box-shadow: 2px 2px 3px rgba(0, 0, 0, 0.2);
+  -webkit-box-shadow: 2px 2px 3px rgba(0, 0, 0, 0.2);
+  -moz-box-shadow: 2px 2px 3px rgba(0, 0, 0, 0.2);
 }
 
-#menu-export-dropdown ul li{ border-bottom:1px solid #ddd }
-#menu-export-dropdown ul li:last-child{ border-bottom:0px }
-#menu-export-dropdown ul li.over{ background-color:red }
-#menu-export-dropdown ul li a.over{ color:white }
-#menu-export-dropdown ul li a.disabled{ color:#ddd }
-#menu-export-dropdown ul li a{ color:#666; text-decoration:none; }
+.dropdown ul li{ border-bottom:1px solid #efefef }
+.dropdown ul li:last-child{ border-bottom:0px }
+.dropdown ul li.over{ background-color:red }
+.dropdown ul li a.over{ color:red }
+.dropdown ul li a.disabled{ color:#ccc }
+.dropdown ul li a{ color:#666; text-decoration:none; }
+
+.menu-list{
+  text-align:right;
+  text-indent:24px;
+  line-height:18px;
+  font-size:12px;
+}
+
+.menu-list li{
+  display:inline-block;
+  margin-left:10px;
+}
+
+#menu-list-full{ background:url(../images/head-button-full.embed.png) no-repeat 0px 0px }
+#menu-list-share{ background:url(../images/head-button-share.embed.png) no-repeat 0px 0px }
+#head-list-close{ background:url(../images/head-button-close.png) no-repeat 0px 0px; display:none }
+#head-list-infos{ background:url(../images/head-button-infos.png) no-repeat 0px 0px }
+#head-list-share{ background:url(../images/head-button-share.embed.png) no-repeat 0px 0px }
 
 #head-button-close{ background:url(../images/head-button-close.png); position:relative; display:none; width:17px; height:17px; float:right;margin:25px 50px 0px 0px; }
-#logo-uniboard{ width:114px; height:25px; position:absolute; top:22px; left:50px }
+#logo-uniboard{ position:relative; float:right; margin-top:8px; }
 
 #document-title{
   font-weight:normal;
@@ -98,6 +134,11 @@ input{
   font-size:12px;
 }
 
+#document-links{
+  margin:auto;
+  position:relative;
+}
+
 #document-title span{
   font-weight:bold;
 }
@@ -105,15 +146,10 @@ input{
 #document-title ul{
   width:200px;
   display:inline-block;
-  line-height:normal;
 }
 
 #data-document-author{
   font-weight:normal;
-}
-
-#document-title ul li{
-  margin-bottom:5px;
 }
 
 #document-title img{
@@ -128,7 +164,7 @@ input{
   vertical-align:middle;
   text-align:center;
   z-index:0;
-  padding-top:85px;
+  padding-top:40px;
   padding-bottom:110px;
   height:100%;
   width:100%;
@@ -139,6 +175,8 @@ input{
   height:100%;
   position:absolute;
   top:0px;
+  letter-spacing:normal;
+  font-size:12px;
 }
 
 #app-viewer-c{
@@ -159,18 +197,48 @@ input{
   vertical-align:middle;
 }
 
-#app-viewer-app{
-  z-index:1;
+#app-viewer-appborder{
+  background-color:white;
   position:relative;
+  display:inline-block;
+  padding-top:10px;
+}
+
+#app-viewer-app{
+  position:relative;
+}
+
+#app-viewer-menu{
+  text-align:center;
+  height:20px;
+  width:100%;
+  position:absolute;
+  top:100%;
+  margin-top:-32px;
+}
+
+#app-viewer-button-close-canvas{
+  overflow:visible;
+  height:13px;
+  width:17px;
+  display:inline-block;
+  margin-right:5px;
+}
+
+#app-viewer-button-close{
+  background:url(../images/head-button-close.png);
+  height:17px;
+  width:17px;
+  display:inline-block;
 }
 
 #boards{ background-color:rgb(236, 237, 238); overflow:visible; display:block; text-align:center; height:100%; width:100%; position:relative; margin:auto }
 .board{ display:inline-block; width:100%; height:100%; letter-spacing:-5px }
-.board-button{ height:99%; width:38px; display:inline-block; position:relative; z-index:1 }
-.board-button-unit{ height:51px; width:32px; top:50%; position:absolute; margin-top:-30px}
-#board-button-previous{ background:url(../images/board-button-previous.png) center left no-repeat; margin-left:5px; }
+.board-button{ height:99%; width:38px; display:none; position:relative; z-index:1 }
+.board-button-unit{ height:51px; width:32px; top:50%; position:absolute; margin-top:-25px;display:none;z-index:2; }
+#board-button-previous{ background:url(../images/board-button-previous.png) center left no-repeat; left:0px; }
 #board-button-previous:hover{ background-image:url(../images/board-button-previous-over.png) }
-#board-button-next{ background:url(../images/board-button-next.png) center right no-repeat; margin-left:1px; }
+#board-button-next{ background:url(../images/board-button-next.png) center right no-repeat; left:100%; margin-left:-32px; }
 #board-button-next:hover{ background-image:url(../images/board-button-next-over.png) }
 
 .page{ display:inline-block; margin:auto; height:100% }
@@ -178,8 +246,8 @@ input{
 
 #thumbnails{ display:block; padding:0px 50px 10px 50px; height:32px; overflow:hidden; position:relative; text-align:center; background:url(../images/menu-slider-background.png) repeat-x center 10px; }
 #thumbnails-slider{ position:relative; height:8px; margin-top:24px; margin-bottom:14px }
-#thumbnails-slider-handler{ height:28px; width:17px; position:relative; top:-21px; background:url(../images/slider-handler.png) }
-.thumbnails-slider-page{ position:relative; display:block; float:left; height:100%; width:100%; background:url(../images/thumbnails-slider-odd.png) center right }
+#thumbnails-slider-handler{ height:28px; width:17px; position:relative; top:-21px; background:url(../images/slider-handler.png); display:none }
+.thumbnails-slider-page{ position:relative; display:block; float:left; height:100%; width:100%; background:url(../images/thumbnails-slider-odd.png) center right; cursor:pointer }
 .thumbnails-slider-page.last{ background-position: center left } 
 .thumbnails-slider-page.current{ background-image:url(../images/thumbnails-slider-current.png) }
 .thumbnail{
@@ -188,11 +256,15 @@ input{
   display:inline-block;
   position:relative;
   border:1px solid rgb(210, 211, 212);
-  margin-right:5px;
+  margin-left:3px;
+  margin-right:3px;
   margin-bottom:25px;
   box-shadow: 2px 2px 3px #ddd;
   -webkit-box-shadow: 2px 2px 3px #ddd;
   -moz-box-shadow: 2px 2px 3px #ddd;
+  -webkit-box-sizing:border-box; 
+  -moz-box-sizing:border-box; 
+  box-sizing:border-box;
 }
 
 #thumbnails-canvas{
@@ -205,38 +277,95 @@ input{
 #thumbnail-next{ background:url(../images/thumbnails-next.png) center center no-repeat }
 #thumbnail-next.disabled{ background-image:none }
 
-.thumbnail.current{
-  border-bottom: 3px solid red;
-}
+.thumbnail.current{ border:2px solid red }
+.thumbnail.selected{ border:1px solid red }
 
 .thumbnail.index{
   height:100px;
+  margin-bottom:6px;
   display:inline-block;
 }
 
-#index{ position:relative; width:100%; height:auto; padding-top:22px; text-align:center; vertical-align:middle; display:none; margin:auto }
+#index{ position:relative; width:100%; height:auto; overflow:auto; text-align:center; vertical-align:middle; display:none; margin:auto }
 #description{ 
+  position:absolute;
+  top:85px;
+  left: 100%;
   display:none; 
-  margin:auto; 
-  width:320px;
-  height:400px;
+  margin:auto;
+  margin-left:-330px;
+  width:250px;
+  height:auto;
   overflow:auto;
   text-align:left;
   line-height:30px;
   color:#333;
-  font-size:14px;
-  padding:30px 30px 10px 30px;
+  font-size:12px;
+  padding:30px 30px 30px 30px;
   background-color:white;
   border:1px solid rgb(210, 211, 212);
-  box-shadow: 2px 2px 10px #bbb;
-  -webkit-box-shadow: 2px 2px 10px #bbb;
-  -moz-box-shadow: 2px 2px 10px #bbb;
 }
 
 #description-text{
   background:url(../images/board-description-background.png);
-  width:290px;
+  width:250px;
+  min-height:400px;
   padding:0px 15px 0px 15px;
+}
+
+#description-container{
+  width:0px;
+  height:99%; 
+  display:inline-block; position:relative;
+}
+
+#sharing{
+  position:relative;
+   display:none; 
+   margin:auto;
+   width:300px;
+   height:auto;
+   overflow:auto;
+   text-align:left;
+   line-height:15px;
+   color:#333;
+   font-size:12px;
+   padding:15px 30px 25px 30px;
+   background-color:white;
+   border:1px solid rgb(210, 211, 212);
+   box-shadow: 2px 2px 10px #bbb;
+   -webkit-box-shadow: 2px 2px 10px #bbb;
+   -moz-box-shadow: 2px 2px 10px #bbb;
+}
+
+#sharing textarea{
+  width:250px;
+  height:45px;
+  border:1px solid rgb(190, 191, 192);
+  resizable:none;
+  margin:none;
+  font-family:helvetica, arial, sans-serif;
+  font-size:12px;
+  color:#333;
+}
+
+#sharing-text{
+  background:url(../images/board-description-background.png);
+  display:block;
+  width:300px;
+  height:auto;
+  width:250px;
+  padding:0px 15px 0px 15px;
+}
+
+#sharing-button-close{
+  position:absolute;
+  left:100%;
+  margin-left:-17px;
+  top:0px;
+  height:17px;
+  width:17px;
+  background:url(../images/head-button-close.png);
 }
 
 #foot{
