--- a/app/views/document_publishing/show.html.erb
+++ b/app/views/document_publishing/show.html.erb
@@ -14,10 +14,14 @@
 	  @import url(/uniboard-player/stylesheets/reset.css);
 	</style>
 	
-	<!-- Libraries -->
+	<!-- Jquery -->
   <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.4/jquery.min.js"></script>
   <script type="text/javascript" src="/uniboard-player/scripts/jquery-ui-1.8rc3.custom.min.js"></script>
   <script type="text/javascript" src="/uniboard-player/scripts/jquery.easing.1.3.js"></script>
+  
+  <!-- Cross-frame -->
+  <script type="text/javascript" src="/uniboard-player/scripts/cross-frame.js"></script>
+  <script type="text/javascript" src="http://yui.yahooapis.com/2.3.1/build/yahoo-dom-event/yahoo-dom-event.js"></script>
   
   <!-- Uniboard-player -->
 	<script type="text/javascript" src="/uniboard-player/scripts/ubplayer.js"></script>
