--- a/app/views/document_publishing/show.html.erb
+++ b/app/views/document_publishing/show.html.erb
@@ -44,8 +44,7 @@
     	    hasPdf:'<%= @published_document.has_pdf %>',
     	    hasUbz:'<%= @published_document.has_ubz %>',
     	    numberOfPages:parseInt('<%= @published_document.page_count %>'),
-    	    pagesBaseUrl:'<%= @published_document.public_url %>', // persistence_url
-          pageFileExtension: '<%= @published_document.page_file_extension %>'
+    	    pagesBaseUrl:'<%= @published_document.public_url %>' // persistence_url
     	  }
   	  };
 	    
