--- a/public/uniboard-player/stylesheets/master.css
+++ b/public/uniboard-player/stylesheets/master.css
@@ -232,17 +232,16 @@ label{ display:block; margin-top:15px; }
   display:inline-block;
 }
 
-#boards{ background-color:rgb(236, 237, 238); overflow:visible; display:block; text-align:center; height:100%; width:100%; position:relative; margin:auto }
-.board{ display:inline-block; width:100%; height:100%; letter-spacing:-5px }
-.board-button{ height:99%; width:38px; display:none; position:relative; z-index:1 }
+#boards{ background-color:rgb(236, 237, 238); overflow:visible; display:table; text-align:center; height:100%; width:100%; position:relative; margin:auto }
+.board{ display:table-cell; vertical-align:middle; width:100%; height:100%; letter-spacing:-5px }
 .board-button-unit{ height:51px; width:32px; top:50%; position:absolute; margin-top:-25px;display:none;z-index:2; }
 #board-button-previous{ background:url(../images/board-button-previous.png) center left no-repeat; left:0px; }
 #board-button-previous:hover{ background-image:url(../images/board-button-previous-over.png) }
 #board-button-next{ background:url(../images/board-button-next.png) center right no-repeat; left:100%; margin-left:-32px; }
 #board-button-next:hover{ background-image:url(../images/board-button-next-over.png) }
 
-.page{ display:inline-block; margin:auto; height:100% }
-#current-page{ position:relative; z-index:0; width:100%; height:100%; background-color:white; border:1px solid rgb(210, 211, 212); box-shadow: 2px 2px 10px #bbb; -webkit-box-shadow: 2px 2px 10px #bbb; -moz-box-shadow: 2px 2px 10px #bbb }
+.page{ display:block; margin:auto; height:100% }
+#current-page{ position:relative; z-index:0; height:100%; background-color:white; border:1px solid rgb(210, 211, 212); box-shadow: 2px 2px 10px #bbb; -webkit-box-shadow: 2px 2px 10px #bbb; -moz-box-shadow: 2px 2px 10px #bbb }
 
 #thumbnails{ display:block; padding:0px 50px 10px 50px; height:32px; overflow:hidden; position:relative; text-align:center; background:url(../images/menu-slider-background.png) repeat-x center 10px; }
 #thumbnails-slider{ position:relative; height:8px; margin-top:24px; margin-bottom:14px }
@@ -294,7 +293,7 @@ label{ display:block; margin-top:15px; }
   display:none; 
   margin:auto;
   margin-left:-330px;
-  width:250px;
+  width:200px;
   height:auto;
   overflow:auto;
   text-align:left;
@@ -308,7 +307,7 @@ label{ display:block; margin-top:15px; }
 
 #description-text{
   background:url(../images/board-description-background.png);
-  width:250px;
+  width:170px;
   min-height:400px;
   padding:0px 15px 0px 15px;
 }
@@ -316,7 +315,7 @@ label{ display:block; margin-top:15px; }
 #description-container{
   width:0px;
   height:99%; 
-  display:inline-block; position:relative;
+  display:inline-block; position:absolute;
 }
 
 #sharing{
