--- a/app/views/widget_result_mailer/notify.erb
+++ b/app/views/widget_result_mailer/notify.erb
@@ -1,5 +1,3 @@
-Hello,
-
-<%= @test_result[:student_name] %> scored <%= @test_result[:score] %> points in edu-game app.
+<%= @test_result[:student_name] %> solved the game of pairs in <strong><%= @test_result[:score] %></strong> steps!
 
 The Uniboard team
