html tags deleted in the game of pairs mailer

--- a/app/views/widget_result_mailer/notify.erb
+++ b/app/views/widget_result_mailer/notify.erb
@@ -1,3 +1,3 @@
-<%= @test_result[:student_name] %> solved the game of pairs in <strong><%= @test_result[:score] %></strong> steps!
+<%= @test_result[:student_name] %> solved the game of pairs in <%= @test_result[:score] %> steps!
 
 The Uniboard team
