new record result page for the game of pairs app

--- a/app/views/widget_result/record_result.html.erb
+++ b/app/views/widget_result/record_result.html.erb
@@ -5,8 +5,16 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en">
 <head>
 	<title>Results</title>
+	<style type="text/css">
+  	body { color: #333; text-align:center; font-family: Trebuchet MS, sans-serif;}
+      h1 { text-align: center; font-size: 32px; }
+      p { text-align: center; padding: 30px; }
+	</style>
 </head>
 <body>
-   <h3>An email containing your score has been sent to your teacher.</h3>
+   <h1>Congratulations!</h1>
+    <p>
+      You solved the game of pairs!<br/>Your score has been sent to your professor.
+    </p>
 </body>
 </html>
