--- a/app/views/widget_result/record_result.html.erb
+++ b/app/views/widget_result/record_result.html.erb
@@ -6,15 +6,19 @@
 <head>
 	<title>Results</title>
 	<style type="text/css">
-  	body { color: #333; text-align:center; font-family: Trebuchet MS, sans-serif;}
+	  html { width:100%; height:100%; }
+  	body { color: #333; text-align:center; font-family: Trebuchet MS, sans-serif; display:table; height:100%; width:100%; margin:0px; padding:0px; }
       h1 { text-align: center; font-size: 32px; }
       p { text-align: center; padding: 30px; }
+      #box-center{ display:table-cell; vertical-align:middle; width:100%; height:100%; }
 	</style>
 </head>
 <body>
-   <h1>Congratulations!</h1>
+  <div id="box-center">
+    <h1>Congratulations!</h1>
     <p>
       You solved the game of pairs!<br/>Your score has been sent to your professor.
     </p>
+  </div>
 </body>
 </html>
