--- a/app/views/widget_result/record_result.html.erb
+++ b/app/views/widget_result/record_result.html.erb
@@ -1,24 +1,24 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.1//EN"
-	"http://www.w3.org/TR/xhtml11/DTD/xhtml11.dtd">
+    "http://www.w3.org/TR/xhtml11/DTD/xhtml11.dtd">
 
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en">
 <head>
 	<title>Results</title>
 	<style type="text/css">
-	  html { width:100%; height:100%; }
-  	body { color: #333; text-align:center; font-family: Trebuchet MS, sans-serif; display:table; height:100%; width:100%; margin:0px; padding:0px; }
-      h1 { text-align: center; font-size: 32px; }
-      p { text-align: center; padding: 30px; }
-      #box-center{ display:table-cell; vertical-align:middle; width:100%; height:100%; }
+	    html {  width:100%; height:100%; }
+	    body { color: #333; text-align:center; font-family: Trebuchet MS, 
+	            sans-serif; display:table; height:100%; width:100%; margin:0px; padding:0px; }
+	    h1 { text-align: center; font-size: 32px; }
+	    p { text-align: center; padding: 30px; }
+	    #box-center{ display:table-cell; vertical-align:middle; width:100%; height:100%; }
 	</style>
 </head>
 <body>
-  <div id="box-center">
-    <h1>Congratulations!</h1>
-    <p>
-      You solved the game of pairs!<br/>Your score has been sent to your professor.
-    </p>
-  </div>
+    <div id="box-center">
+        <h1>Congratulations!</h1>
+        <p>You solved the game of pairs!<br/>Your score has been sent to your professor.</p>
+        <p>Play <a href="#" onclick="history.back();">again</a> ?</p>
+    </div>
 </body>
 </html>
