--- a/app/views/widget_result/record_result.html.erb
+++ b/app/views/widget_result/record_result.html.erb
@@ -18,7 +18,7 @@
     <div id="box-center">
         <h1>Congratulations!</h1>
         <p>You solved the game of pairs!<br/>Your score has been sent to your professor.</p>
-        <p>Play <a href="#" onclick="history.back();">again</a> ?</p>
+        <p>Play <a href="#" onclick="document.location.href='http://www.google.com'">again</a> ?</p>
     </div>
 </body>
 </html>
