--- a/app/views/widget_result/record_result.html.erb
+++ b/app/views/widget_result/record_result.html.erb
@@ -5,6 +5,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en">
 <head>
 	<title>Results</title>
+	
 	<style type="text/css">
 	    html {  width:100%; height:100%; }
 	    body { color: #333; text-align:center; font-family: Trebuchet MS, 
@@ -13,12 +14,18 @@
 	    p { text-align: center; padding: 30px; }
 	    #box-center{ display:table-cell; vertical-align:middle; width:100%; height:100%; }
 	</style>
+	
+	<script type="text/javscript">
+	    document.getElementById("button-playagain").onclick = function(){
+	        document.location.href = 'http://www.google.com';
+	    };
+	</script>
 </head>
 <body>
     <div id="box-center">
         <h1>Congratulations!</h1>
         <p>You solved the game of pairs!<br/>Your score has been sent to your professor.</p>
-        <p>Play <a href="#" onclick="document.location.href='http://www.google.com'">again</a> ?</p>
+        <p>Play <a href="#" id="button-playagain">again</a> ?</p>
     </div>
 </body>
 </html>
