--- a/app/views/widget_result/record_result.html.erb
+++ b/app/views/widget_result/record_result.html.erb
@@ -14,16 +14,15 @@
 	    p { text-align: center; padding: 30px; }
 	    #box-center{ display:table-cell; vertical-align:middle; width:100%; height:100%; }
 	</style>
-	
 </head>
 <body>
     <div id="box-center">
         <h1>Congratulations!</h1>
         <p>You solved the game of pairs!<br/>Your score has been sent to your professor.</p>
-        <p>Play <a href="#" id="button-playagain">again</a> ?</p>
+        <p><a href="#" id="button-playagain">Play again ?</a></p>
     </div>
     
-    <script type="text/javscript">
+    <script type="text/javascript">
 	    document.getElementById("button-playagain").onclick = function(){
 	        document.location.href = 'http://www.google.com';
 	    };
