--- a/app/views/widget_result/record_result.html.erb
+++ b/app/views/widget_result/record_result.html.erb
@@ -24,7 +24,7 @@
     
     <script type="text/javascript">
 	    document.getElementById("button-playagain").onclick = function(){
-	        document.location.href = 'http://www.google.com';
+	        document.location.href = <%= params[:redirect_url] %>;
 	    };
 	</script>
 </body>
