document.location url has to be a string...

--- a/app/views/widget_result/record_result.html.erb
+++ b/app/views/widget_result/record_result.html.erb
@@ -24,7 +24,7 @@
     
     <script type="text/javascript">
 	    document.getElementById("button-playagain").onclick = function(){
-	        document.location.href = <%= @redirect_url %>;
+	        document.location.href = '<%= @redirect_url %>';
 	    };
 	</script>
 </body>
